Fixed spelling mistake and added new infromation on blender tab

--- a/Blender.html
+++ b/Blender.html
@@ -34,7 +34,21 @@
     <section>
 
         <h2>Jeg har jobbet en del med Blender før, og har også hatt det i dybdelæring</h2>
-        
+        <p>I den andre dybdelæringen min, hadde jeg Blender. En dybdelæring varer i 5-6 uker,
+        <br>
+        hvor vi jobber med den 2-3 ganger i uken. Jeg lagde en Formel 1 bil, som jeg ble veldig fornøyd med.</p>
+
+        <div class="gallery_blender">
+            <a target="_blank" href="F1-Side Front-1.png">
+              <img src="F1-Side Front-1.png" alt="Formel 1 bil" width="1000" height="auto">
+            </a>
+        </div>
+        <div class="gallery_blender">
+            <a target="_blank" href="F1-Side Rear (Reflective Floor)-1.png">
+              <img src="F1-Side Rear (Reflective Floor)-1.png" alt="Formel 1 bil" width="1000" height="auto">
+            </a>
+        </div>
+
     </section>
 
     <!--Dette er bunnen av siden-->
