--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h4>Her vil du kunne lese om meg, mitt abreid, og slikt!</h4>
         
         <p>
-            For å se hva jeg har hodlt på med, se på "Mitt Arbeid"
+            For å se hva jeg har holdt på med, se på "Mitt Arbeid"
             <br>
             <br>
             For å vite mer om meg, se "Om Meg"
