Fixed spelling mistake, changed design of buttons and added more pictures to blender tab

--- a/Mitt_Arbeid.html
+++ b/Mitt_Arbeid.html
@@ -41,7 +41,6 @@
 
             <a href="Python.html" class="button">
                 <img src="Python.jpg" alt="Python Kode">
-                <div class="top">Python</div>
                 <p class="button_text">
                     Vi har holdt en del på med python på skolen,
                     <br>
@@ -49,13 +48,13 @@
                     <br>
                     inneholder både matte, random og trutle.
                 </p>
+                
             </a>
 
             <!--C#-->
 
             <a href="C%23.html" class="button">
                 <img src="C%23.jpg" alt="C# Kode">
-                <div class="top">C#</div>
                 <p class="button_text">
                     Jeg har jobbet med ett spill i C# og Unity i dybdelæring
                     <br>
@@ -67,11 +66,10 @@
 
             <a href="Blender.html" class="button">
                 <img src="HP Monitor Blank Screen - Copy.png" alt="HP Monitor laget i blender">
-                <div class="top">Blender</div>
                 <p class="button_text">
                     Jeg har jobbet en del med Blender før, og har også hatt det i dybdelæring.
                     <br>
-                    Jeg liker veldig godt belnder, som er grunnen til at jeg har over 250 timer med det.
+                    Jeg liker veldig godt blender, som er grunnen til at jeg har over 260 timer med det.
                 </p>
             </a>
 
@@ -79,7 +77,6 @@
 
             <a href="Unreal.html" class="button">
                 <img src="Unreal AI.jpg" alt="Unreal Kode">
-                <div class="top">Unreal</div>
                 <p class="button_text">
                     Jeg har lagd en AI som går til forskjellige posisjoner på et valgt område.
                 </p>
