--- a/Blender.html
+++ b/Blender.html
@@ -37,6 +37,8 @@
         <p>I den andre dybdelæringen min, hadde jeg Blender. En dybdelæring varer i 5-6 uker,
         <br>
         hvor vi jobber med den 2-3 ganger i uken. Jeg lagde en Formel 1 bil, som jeg ble veldig fornøyd med.</p>
+        <br>
+        <p>Jeg har også laget en skjerm og en blender i friminuttene på skolen.</p>
 
         <div class="gallery_blender">
             <a target="_blank" href="F1-Side Front-1.png">
@@ -46,6 +48,16 @@
         <div class="gallery_blender">
             <a target="_blank" href="F1-Side Rear (Reflective Floor)-1.png">
               <img src="F1-Side Rear (Reflective Floor)-1.png" alt="Formel 1 bil" width="1000" height="auto">
+            </a>
+        </div>
+        <div class="gallery_blender">
+            <a target="_blank" href="HP Monitor Blank Screen.jpg">
+              <img src="HP Monitor Blank Screen.jpg" alt="Formel 1 bil" width="1000" height="auto">
+            </a>
+        </div>
+        <div class="gallery_blender">
+            <a target="_blank" href="BlenderIcon.png">
+              <img src="BlenderIcon.png" alt="Formel 1 bil" width="1000" height="auto">
             </a>
         </div>
 
